tests/vrml97/good/proto-field-is-proto.wrl
#VRML V2.0 utf8
PROTO Node0 [] { Group {} }
PROTO Node1 [
  field SFNode field0 Node0 {}
] {
  Collision {
    proxy IS field0
  }
}
Node1 {}
