tests/vrml97/bad/value-for-eventin-in-proto.wrl
#VRML V2.0 utf8
PROTO Node [ eventIn MFNode set_children ] {
  Group { set_children [ Group {} ] }
}
